fix: changement de requetes et filtres